src/main/resources/static/errors/CannotFindSymbol.error.txt
CannotFindSymbol.java:3: error: cannot find symbol
        System.out.println(messge);
                           ^
  symbol:   variable messge
  location: class CannotFindSymbol
1 error
